--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </style>
 </head>
 <body>
-    <center><img src="../image/amazon.png"></center>
+    <center><img src="../Amazon-login/public/image/amazon.png"></center>
     <form class="p-4">
         <h3>Sign in</h3>
         <div class="mb-3">
