--- a/index.html
+++ b/index.html
@@ -76,10 +76,27 @@
      .g{
       margin-right :30px;
      }
+     @media screen and (orientation:portrait){
+   .z{
+      margin-left: -460px;
+   }
+   .m{
+      padding: unset;
+      width: 350px;
+   }
+   form{
+      width: 350px;
+   }
+  footer{
+   display: none;
+  }
+  
+     }
     </style>
 </head>
 <body>
     <center><img src="../Amazon-login/public/image/amazon.png"></center>
+    <div class="z">
     <form class="p-4">
         <h3>Sign in</h3>
         <div class="mb-3">
@@ -101,12 +118,13 @@
         <div >New to Amazon</div>
        <div class="b"><hr width="150px" ></div>
     </div>
-</div>
+
 <div class="l">Create your Amazon Account</div>
 <footer><div class="m">
   <span class="g">Condition of Use</span><span class="g">Privacy Notice</span><span>Help</span>
 </div>
 <div>@ 1996-2022 ,Amazon.com, inc, or its affliates</div>
 </footer>
+</div>
 </body>
 </html>
